--- a/internship.html
+++ b/internship.html
@@ -88,14 +88,14 @@
         </div>
         <div class="internship-card">
             <div class="internship-header">
-                <div class="company-name">Iris Tech Developers</div>
-                    <div class="duration">June 2023 - July 2023</div>
+                <div class="company-name">QSpiders</div>
+                    <div class="duration">September 2022 - October 2022</div>
                     
                 </div>
-                <div class="job-title">Data Science Intern</div>
+                <div class="job-title">Java Full Stack Intern</div>
                 <img src="data science-internship.jpg" alt="" >
                 <p class="description">
-                    Developed a machine learning model in Python to predict car prices using structured data, achieving an accuracy of 95% through extensive feature engineering and hyperparameter tuning with Scikit-Learn.
+                    As a Java Full-Stack Intern, I focused on building a strong foundation in core Java concepts, exploring object-oriented programming principles, data structures, and basic syntax.
                 </p>
         </div>
     </div>
