--- a/internship.html
+++ b/internship.html
@@ -93,7 +93,7 @@
                     
                 </div>
                 <div class="job-title">Java Full Stack Intern</div>
-                <img src="data science-internship.jpg" alt="" >
+                <img src="Qspiders.jpg" alt="" >
                 <p class="description">
                     As a Java Full-Stack Intern, I focused on building a strong foundation in core Java concepts, exploring object-oriented programming principles, data structures, and basic syntax.
                 </p>
